Bug 255939 - Akregator Crashes After Adding New Feed
Summary: Akregator Crashes After Adding New Feed
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6.5
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 284572 298327 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-11-03 05:46 UTC by dlesage
Modified: 2015-09-05 19:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dlesage 2010-11-03 05:46:39 UTC
Application: akregator (1.6.5)
KDE Platform Version: 4.5.2 (KDE 4.5.2)
Qt Version: 4.7.0
Operating System: Linux 2.6.35.6-43.fc14.x86_64 x86_64
Distribution (Platform): Fedora RPMs

-- Information about the crash:
- What I was doing when the application crashed:

1. Added a new feed.  Postings came down without a problem.
2.  Added a second new feed.  Postings came down and when I clicked on the heading of the first one to read it, the app crashed immediately.

-- Backtrace:
Application: Akregator (akregator), signal: Segmentation fault
82	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[Current thread is 1 (Thread 0x7fc2bc31f840 (LWP 13068))]

Thread 2 (Thread 0x7fc2b5646700 (LWP 13069)):
#0  0x0000003acd4da883 in __poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=<value optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x0000003acf442374 in g_main_context_poll (context=0xa462e0, block=1, dispatch=1, self=<value optimized out>) at gmain.c:3093
#2  g_main_context_iterate (context=0xa462e0, block=1, dispatch=1, self=<value optimized out>) at gmain.c:2775
#3  0x0000003acf442c82 in g_main_loop_run (loop=0xa463c0) at gmain.c:2988
#4  0x00007fc2b5b5f774 in gdbus_shared_thread_func (data=<value optimized out>) at gdbusprivate.c:277
#5  0x0000003acf469446 in g_thread_create_proxy (data=0xa463e0) at gthread.c:1897
#6  0x0000003acd806d5b in start_thread (arg=0x7fc2b5646700) at pthread_create.c:301
#7  0x0000003acd4e427d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 1 (Thread 0x7fc2bc31f840 (LWP 13068)):
[KCrash Handler]
#6  0x00007fc2a607f21c in Akregator::Feed::findArticle(QString const&) const () from /usr/lib64/kde4/akregatorpart.so
#7  0x00007fc2a608dcc2 in Akregator::FeedList::findArticle(QString const&, QString const&) const () from /usr/lib64/kde4/akregatorpart.so
#8  0x00007fc2a6096683 in ?? () from /usr/lib64/kde4/akregatorpart.so
#9  0x00007fc2a60967a4 in ?? () from /usr/lib64/kde4/akregatorpart.so
#10 0x00007fc2a6096e90 in ?? () from /usr/lib64/kde4/akregatorpart.so
#11 0x00007fc2a60973bc in ?? () from /usr/lib64/kde4/akregatorpart.so
#12 0x0000003ad797002f in QMetaObject::activate (sender=0x3e913a0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff2ad2d180) at kernel/qobject.cpp:3272
#13 0x0000003add310047 in QItemSelectionModel::selectionChanged (this=<value optimized out>, _t1=<value optimized out>, _t2=<value optimized out>) at .moc/release-shared/moc_qitemselectionmodel.cpp:152
#14 0x0000003add316c27 in QItemSelectionModel::emitSelectionChanged (this=0x3e913a0, newSelection=..., oldSelection=...) at itemviews/qitemselectionmodel.cpp:1525
#15 0x0000003add316eb8 in QItemSelectionModel::select (this=0x3e913a0, selection=<value optimized out>, command=<value optimized out>) at itemviews/qitemselectionmodel.cpp:1088
#16 0x0000003add3060c4 in QTreeViewPrivate::select (this=0xd49f20, topIndex=<value optimized out>, bottomIndex=<value optimized out>, command=...) at itemviews/qtreeview.cpp:3651
#17 0x0000003add306d20 in QTreeView::setSelection (this=<value optimized out>, rect=<value optimized out>, command=...) at itemviews/qtreeview.cpp:2280
#18 0x0000003add2bd871 in QAbstractItemView::mousePressEvent (this=0xcfc0f0, event=<value optimized out>) at itemviews/qabstractitemview.cpp:1665
#19 0x00007fc2a609fa7b in Akregator::ArticleListView::mousePressEvent(QMouseEvent*) () from /usr/lib64/kde4/akregatorpart.so
#20 0x0000003adce06519 in QWidget::event (this=0xcfc0f0, event=0x7fff2ad2e8c0) at kernel/qwidget.cpp:8183
#21 0x0000003add1aa386 in QFrame::event (this=0xcfc0f0, e=0x7fff2ad2e8c0) at widgets/qframe.cpp:557
#22 0x0000003add2bac53 in QAbstractItemView::viewportEvent (this=0xcfc0f0, event=0x7fff2ad2e8c0) at itemviews/qabstractitemview.cpp:1619
#23 0x0000003add2ff915 in QTreeView::viewportEvent (this=0xcfc0f0, event=0x7fff2ad2e8c0) at itemviews/qtreeview.cpp:1256
#24 0x0000003ad795b937 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<value optimized out>, receiver=0xd6eb20, event=0x7fff2ad2e8c0) at kernel/qcoreapplication.cpp:847
#25 0x0000003adcdb4b31 in QApplicationPrivate::notify_helper (this=0x9ef960, receiver=0xd6eb20, e=0x7fff2ad2e8c0) at kernel/qapplication.cpp:4392
#26 0x0000003adcdb9e5a in QApplication::notify (this=<value optimized out>, receiver=0xd6eb20, e=0x7fff2ad2e8c0) at kernel/qapplication.cpp:3959
#27 0x0000003ade020416 in KApplication::notify (this=0x7fff2ad2f580, receiver=0xd6eb20, event=0x7fff2ad2e8c0) at /usr/src/debug/kdelibs-4.5.2/kdeui/kernel/kapplication.cpp:310
#28 0x0000003ad795b7ac in QCoreApplication::notifyInternal (this=0x7fff2ad2f580, receiver=0xd6eb20, event=0x7fff2ad2e8c0) at kernel/qcoreapplication.cpp:732
#29 0x0000003adcdb5b65 in sendEvent (receiver=0xd6eb20, event=0x7fff2ad2e8c0, alienWidget=0xd6eb20, nativeWidget=0xd1a2e0, buttonDown=0x3add882658, lastMouseReceiver=..., spontaneous=true) at ../../src/corelib/kernel/qcoreapplication.h:215
#30 QApplicationPrivate::sendMouseEvent (receiver=0xd6eb20, event=0x7fff2ad2e8c0, alienWidget=0xd6eb20, nativeWidget=0xd1a2e0, buttonDown=0x3add882658, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3058
#31 0x0000003adce32d68 in QETWidget::translateMouseEvent (this=0xd1a2e0, event=<value optimized out>) at kernel/qapplication_x11.cpp:4403
#32 0x0000003adce314b9 in QApplication::x11ProcessEvent (this=0x7fff2ad2f580, event=0x7fff2ad2f210) at kernel/qapplication_x11.cpp:3536
#33 0x0000003adce58a52 in x11EventSourceDispatch (s=0x9f38a0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#34 0x0000003acf441e33 in g_main_dispatch (context=0x9f3120) at gmain.c:2149
#35 g_main_context_dispatch (context=0x9f3120) at gmain.c:2702
#36 0x0000003acf442610 in g_main_context_iterate (context=0x9f3120, block=1, dispatch=1, self=<value optimized out>) at gmain.c:2780
#37 0x0000003acf4428ad in g_main_context_iteration (context=0x9f3120, may_block=1) at gmain.c:2843
#38 0x0000003ad79868af in QEventDispatcherGlib::processEvents (this=0x9bfe70, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#39 0x0000003adce586ee in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#40 0x0000003ad795ab42 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#41 0x0000003ad795ad8c in QEventLoop::exec (this=0x7fff2ad2f520, flags=...) at kernel/qeventloop.cpp:201
#42 0x0000003ad795f20b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#43 0x0000000000408fa5 in _start ()

Possible duplicates by query: bug 254956, bug 251742, bug 251668, bug 250412, bug 250332.

Reported using DrKonqi
Comment 1 Christophe Marin 2011-10-29 14:28:14 UTC
*** Bug 284572 has been marked as a duplicate of this bug. ***
Comment 2 Christophe Marin 2012-04-25 22:44:52 UTC
*** Bug 298327 has been marked as a duplicate of this bug. ***
Comment 3 Allen Winter 2015-09-05 15:25:38 UTC
Git commit 33f3f6396e1891e4c7f5c98059595a8e426a9dc8 by Allen Winter.
Committed on 05/09/2015 at 15:23.
Pushed by winterz into branch 'KDE/4.14'.

feed.cpp - in findArticle() use QHash::values as intended
no longer crashes for me when adding multiple feeds
MERGE: safe to merge to modern releases

M  +1    -7    akregator/src/feed.cpp

http://commits.kde.org/kdepim/33f3f6396e1891e4c7f5c98059595a8e426a9dc8
Comment 4 Laurent Montel 2015-09-05 19:27:44 UTC
Git commit 3860473069103e93101daab515a8f77a62a21baf by Montel Laurent.
Committed on 05/09/2015 at 19:27.
Pushed by mlaurent into branch 'master'.

Backport fix from Allen

feed.cpp - in findArticle() use QHash::values as intended
no longer crashes for me when adding multiple feeds

M  +1    -5    akregator/src/feed.cpp

http://commits.kde.org/kdepim/3860473069103e93101daab515a8f77a62a21baf