feed.cpp - in findArticle() use QHash::values as intended no longer crashes for me when adding multiple feeds

BUG: 255939
MERGE: safe to merge to modern releases